--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-sizeme": "^2.6.10",
-    "redux": "^4.0.4"
+    "react-sizeme": "^2.6.10"
   },
   "scripts": {
     "start": "react-scripts start",
